css/layout.css
@media screen and (min-width: 1024px) {
  #wiki-article-menu ul li .wiki-article-menu-text {
    display: none;
  }
}
#wiki-article-menu ul li:hover .wiki-article-menu-text,
#wiki-article-menu ul li.is-active .wiki-article-menu-text {
  display: initial;
}
#wiki-article-menu ul li.star-tab.starred a {
  color: goldenrod;
  border-color: gold;
  background: gold;
}
.res-wrapper {
  display: block;
  margin: 30px 0px;
}
@keyframes head-loading {
  from {
    background-color: #747474;
  }
  to {
    background-color: #cacaca;
  }
}
@keyframes body-loading {
  from {
    background-color: #e2d7d7;
  }
  to {
    background-color: #f3f3f3;
  }
}
.res-wrapper.res-loading[data-visible="true"] .r-head {
  animation: head-loading 0.5s infinite;
}
.res-wrapper.res-loading[data-visible="true"] .r-body {
  animation: body-loading 0.5s infinite;
}
.topic-discuss a.more-box {
  padding: 10px;
  margin-left: 20px;
  border: 1px solid black;
}
.res .r-head {
  padding: 10px 12px 5px 15px;
  background: #aaaaaa;
  border-radius: 4px 4px 0px 0px;
}
.res .r-head.first-author {
  background: #70cc93;
}
.res .r-head .pull-right {
  float: right;
}
.res .r-body {
  padding: 5px 10px 10px 15px;
  background: #e8e8e8;
  border-radius: 0px 0px 4px 4px;
  overflow-x: scroll;
}
.res .r-body.r-hidden-body {
  background: black;
  color: white;
}
.res .r-body.r-hidden-body .hidden-content {
  display: none;
}
.res .combo.admin-menu {
  padding: 5px;
}
.res.res-type-status .r-body {
  background: orange;
}
textarea#textInput,
iframe#previewFrame {
  height: 500px;
  width: 100%;
}
.wiki-article .wiki-category > ul {
  margin: 0;
}
/* diff deleted line fix */
table.diff .delete {
  border-radius: initial;
  border: none;
  cursor: initial;
  font-size: initial;
  height: initial;
  max-width: initial;
  max-height: initial;
  min-width: initial;
  min-height: initial;
  width: initial;
}
table.diff .delete :after,
table.diff .delete :before {
  background-color: initial !important;
  height: 0px;
  width: 0px;
  transform: none;
  transform-origin: none;
}
/* expandable navbar dropdown in mobile */
/* from https://github.com/jgthms/bulma/issues/1218 */
@media screen and (max-width: 1024px) {
  .navbar-link:after {
    border: 1px solid #00d1b2;
    border-right: 0;
    border-top: 0;
    content: " ";
    display: block;
    height: 0.5em;
    pointer-events: none;
    position: absolute;
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    width: 0.5em;
    margin-top: -0.375em;
    right: 1.125em;
    top: 50%;
  }
}
/* jump buttons */
.jump-buttons {
  position: fixed;
  bottom: 10px;
  right: 10px;
}
.jump-buttons ul {
  list-style-type: none;
}
.jump-buttons ul li {
  cursor: pointer;
  display: inline-block;
  background: #00d1b2;
  border: 1px solid #00d1b2;
  font-size: 35px;
  text-align: center;
  color: white;
  width: 50px;
  height: 50px;
  border-radius: 25px;
}
.jump-buttons ul li + li {
  margin-left: 5px;
}
.jump-buttons ul li > * {
  vertical-align: text-middle;
}
/* dark */
body.dark-buma .nav {
  background: #424242;
  color: white;
}
body.dark-buma .nav a:hover {
  background: dimgray;
  color: white;
}
body.dark-buma .nav a {
  color: #a0a0a0;
}
body.dark-buma .hero.is-primary {
  background: #345f59;
}
body.dark-buma .hero.is-danger {
  background: #511f29;
}
body.dark-buma section.section,
body.dark-buma footer {
  background: white;
  filter: invert(1);
}
.container .wiki-article.content {
  overflow-x: scroll;
}
ol.breadcrumb li {
  display: inline-block;
}
ol.breadcrumb li a {
  padding-right: 0px;
}
ol.breadcrumb li:before {
  content: "";
}

